# pyeventbt

./: CHANGELOG.md  README.md  example_bbands_breakout.py  example_ma_crossover.py  example_quantdle_ma_crossover.py  pyproject.toml
.github/workflows/: release.yml
pyeventbt/data_provider/connectors/: csv_data_connector.py  mt5_live_data_connector.py
pyeventbt/execution_engine/connectors/: mt5_simulator_execution_engine_connector.py
pyeventbt/hooks/: hook_service.py
pyeventbt/indicators/: __init__.py  indicators.py
pyeventbt/sizing_engine/sizing_engines/: mt5_risk_pct_sizing.py
pyeventbt/strategy/: strategy.py
pyeventbt/trading_director/: trading_director.py
pyeventbt/utils/: utils.py
