[tool.poetry]
name = "pyeventbt"
version = "0.0.8"
description = "Event-driven backtesting and live trading framework for Python and MetaTrader 5"
authors = ["Marti Castany, Alain Porto"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://pyeventbt.com"
repository = "https://github.com/marticastany/pyeventbt"
keywords = [
    "mt5",
    "metatrader5",
    "backtesting",
    "mt5 python",
    "event-driven",
    "trading",
    "algorithmic-trading",
    "python-trading",
    "quantitative-finance",
    "live-trading",
    "metatrader",
    "forex",
    "technical-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
packages = [{ include = "pyeventbt" }]

[tool.poetry.urls]
Documentation = "https://pyeventbt.com"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.1.1"
pydantic = "^2.12.3"
numpy = "^2.0.0"
polars = "^1.35.0"
pandas = "^2.2.3"
numba = "^0.62.1"
matplotlib = "^3.7.0"
scipy = "^1.10.0"
scikit-learn = "^1.3.0"
PyYAML = "^6.0"


[tool.poetry.scripts]
pyeventbt = "pyeventbt.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
